--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 #root {
   max-width: 100vw;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: column;
+}
+
+body{
+  padding: 0;
+  margin: 0;
 }
