--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  padding: 0;
+  margin: 0;
+
+  --font-color-black: #020817;
+  --font-color-gray: #64748b;
 }
