--- a/src/components/UploadArea/UploadMode/UploadMode.css
+++ b/src/components/UploadArea/UploadMode/UploadMode.css
@@ -3,10 +3,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2px;
+    padding: 4px;
     border-radius: 5px;
     background-color: var(--background-gray);
     margin: 20px 0px 20px 0px;
+    box-sizing: border-box;
 }
 
 .upload-arquivo,
@@ -15,27 +16,26 @@
     align-items: center;
     justify-content: center;
     width: 49%;
-    padding: 8px 12px;
+    padding: 6px 12px;
     border: none;
     border-radius: 4px;
     background-color: var(--background-gray);
-    font-size: 10.5pt;
+    font-size: 14px;
     color: var(--font-color-gray);
     font-weight: 540;
     cursor: pointer;
+    box-sizing: border-box;
 }
 
+.link-github svg,
 .upload-arquivo svg{
     font-size: 16px;
     margin-right: 5px;
 }
 
-.link-github svg{
-    width: 20px;
-    margin-right: 5px;
-}
-
-.upload-arquivo{
+.upload-arquivo.ativo,
+.link-github.ativo
+{
     background-color: #ffff;
     color: var(--font-color-black);
 }
