--- a/src/components/ui/btnGithub/BtnGithub.css
+++ b/src/components/ui/btnGithub/BtnGithub.css
@@ -4,7 +4,7 @@
     justify-content: center;
     border: 1px solid #d1d1d1;
     padding: 4px 12px;
-    font-size: 11pt;
+    font-size: 14px;
     color: black;
     border-radius: 5px;
 }
