--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
+  max-width: 100vw;
+  max-height: 100vh;
   font-family: system-ui, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  
   padding: 0;
   margin: 0;
 
@@ -15,4 +16,5 @@
   --border-blue: #2463eb2d;
   --color-blue: #2463eb;
   --color-blue-hover: #356ee9;
+  overflow-x: hidden;
 }
