--- a/frontend/src/components/UploadArea/UploadArea.css
+++ b/frontend/src/components/UploadArea/UploadArea.css
@@ -1,7 +1,46 @@
-.upload-area{
+.upload-area-container{
     width: 60%;
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+
+.upload-area {
+    border-radius: 8px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Espaço entre UploadMode, UploadFile/GitHubArea e ações */
+  }
+  
+  .upload-actions {
+    display: flex;
+    justify-content: start; /* Centraliza o botão */
+  }
+  
+  .final-upload-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #d1d1d1;
+    padding: 8px 16px;
+    font-size: 14px;
+    color: var(--font-color-black);
+    border-radius: var(--default-border-radius);
+    cursor: pointer;
+    background-color: var(--color-blue);
+    color: #ffff;
+    transition: background-color 0.2s ease, opacity 0.2s ease;
+  }
+  
+  .final-upload-button:hover {
+    transition: 0.5s;
+    background-color: var(--color-blue-hover);
+  }
+  
+  .final-upload-button:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+    opacity: 0.7;
+  }
