--- a/frontend/src/components/UploadArea/UploadArea.css
+++ b/frontend/src/components/UploadArea/UploadArea.css
@@ -44,3 +44,12 @@
     cursor: not-allowed;
     opacity: 0.7;
   }
+
+  .upload-status-message{
+    background-color: #f8d7da;
+    border: 1px solid #f5c2c7;
+    color: #842029;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    border-radius: var(--default-border-radius);
+  }
